<resources>
    <string name="app_name">Diplomski Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="income_add">Add incomes</string>
    <string name="expense_add">Add expenses</string>
    <string name="entries_list">Show entries</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_description">Description</string>
    <string name="transaction_type">Type</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="table_header_date">Date</string>
    <string name="table_header_amount">Amount</string>
    <string name="table_header_description">Description</string>
    <string name="table_header_edit">Edit</string>
    <string name="table_header_delete">Delete</string>
    <string name="table_header_type">Type</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

</resources>